syntax = "proto3";

option java_multiple_files = true;
option java_package = "messages";
option java_outer_classname = "MessagesProto";

package calculator;

enum Type{
  News = 0;
  Work = 1;
}
message ListenRequest{
  Type type = 1;
}

message Message {
  string message = 1;
}

service  MessagesService {
  rpc listenToMessages(ListenRequest) returns (stream Message){}

}

